<resources>
    <string name="app_name">AcmeExplorer</string>
    <string name="login_email_hint">Correo electrónico</string>
    <string name="login_pass_et_hint">Contraseña</string>
    <string name="login_button_mail_text">Acceder</string>
    <string name="login_button_google_text">Acceder con Google</string>
    <string name="login_button_register_text">¿No tienes cuenta? Regístrate</string>
    <string name="login_mail_error_1">El correo electrónico no puede estar vacío</string>
    <string name="login_mail_error_2">La contraseña no puede estar vacía</string>
    <string name="login_mail_access_error">Se ha producido un error al acceder</string>
    <string name="login_verified_mail_error">Aún no has validado tu cuenta. ¿Quieres que te enviemos de nuevo el correo de verificación?</string>
    <string name="login_verified_mail_error_ok">Enviar correo</string>
    <string name="login_verified_mail_error_sent">Hemos enviado un correo de verificación a tu dirección</string>
    <string name="login_verified_mail_error_no_sent">No se ha podido enviar un correo de verificación a tu cuenta</string>
    <string name="login_verified_mail_error_cancel">Cancelar</string>
    <string name="login_google_play_services_error">Debes actualizar Google Play Services antes de continuar</string>
    <string name="login_download_gps">Actualizar</string>
    <string name="gps_download_url">market://details?id=com.google.android.gms</string>
    <string name="market_download_url">https://play.google.com/store/apps/details?id=com.google.android.gms</string>
    <string name="default_client_id">320287890669-rlltda54sc79imq5rv04surprlqg47qm.apps.googleusercontent.com</string>
    <string name="login_completed">El usuario %1$s ha accedido correctamente</string>
    <string name="login_pass_confirmation_et_hint">Introducir de nuevo la contraseña</string>
    <string name="login_button_signup_text">Registrar usuario</string>
    <string name="signup_error_user">La dirección de correo no es válida</string>
    <string name="signup_error_pass">La contraseña no es válida</string>
    <string name="signup_error_pass_not_match">Las contraseñas no coinciden</string>
    <string name="signup_created">El usuario se ha registrado correctamente</string>
    <string name="signup_create_error">Se ha producido un error al registrar el usuario</string>
    <string name="signup_create_error_email_in_use">La dirección de correo ya está en uso</string>
    <string name="get_trip_database_error">Ha ocurrido un error al intentar recuperar el viaje</string>
    <string name="get_user_database_error">Ha habido un error al intentar obtener su usuario. Inténtelo de nuevo más tarde y disculpe las molestias.</string>
    <string name="greetings_user">Hola, %1$s</string>
    <string name="user_detail_title">Mi perfil</string>
    <string name="user_detail_picture_desc">Imagen de perfil del usuario</string>
    <string name="user_detail_city_desc">Ciudad:</string>
    <string name="user_detail_birthdate_desc">Fecha de nacimiento:</string>
    <string name="user_detail_email_desc">Email:</string>
    <string name="Edit_user_button">Editar datos del perfil</string>
    <string name="error_load_user_profile">No se ha podido cargar la información del usuario, disculpe las molestias.</string>
    <string name="my_profile">Mi perfil</string>
    <string name="user_edit_name_hint">Nombre</string>
    <string name="user_edit_surname_hint">Apellidos</string>
    <string name="user_edit_email_hint">Correo electrónico</string>
    <string name="user_edit_city_hint">Ciudad</string>
    <string name="user_edit_picture_hint">Enlace de foto de perfil</string>
    <string name="user_edit_birthdate_tv">F. nacimiento:</string>
    <string name="user_edit_birthdate_image_desc">Clica aquí para modificar la fecha de nacimiento</string>
    <string name="user_edit_save">Guardar</string>
    <string name="user_edit_name_error">El nombre no es válido</string>
    <string name="user_edit_surname_error">Debe indicar al menos un apellido</string>
    <string name="user_edit_city_error">Debe indicar una ciudad</string>
    <string name="create_new_trip">Crear viaje</string>
    <string name="my_created_trips">Mis viajes creados</string>
    <string name="trip_create_startPlace">Lugar de salida</string>
    <string name="trip_create_endPlace">Lugar de llegada</string>
    <string name="trip_create_description">Descripción del viaje</string>
    <string name="trip_create_price">Precio (€)</string>
    <string name="trip_create_picture">Enlace a imagen</string>
    <string name="trip_create_startDate">Fecha de salida:</string>
    <string name="trip_create_startDate_desc">Clica aquí para modificar la fecha de salida</string>
    <string name="trip_create_endDate_desc">Clica aquí para modificar la fecha de llegada</string>
    <string name="trip_create_endDate">Fecha de llegada:</string>
    <string name="trip_create_save">Crear viaje</string>
    <string name="trip_create_place_error">El lugar no es válido</string>
    <string name="trip_create_description_error">La descripción no es válida</string>
    <string name="trip_create_price_error">El precio no es válido</string>
    <string name="trip_create_dates_error">La fecha de salida no puede ser posterior a la de llegada</string>
    <string name="trip_create_dates_error_2">La salida no puede ser una fecha pasada</string>
    <string name="user_detail_change_picture">Cambiar foto</string>
    <string name="take_picture_camera_rationale">Necesitamos acceder a tu cámara</string>
    <string name="take_picture_camera_rationale_ok">Permitir</string>
    <string name="camera_not_granted">No es posible usar esta función sin la cámara</string>
    <string name="save_picture_external_storage">Necesitamos acceder al almacenamiento del dispositivo para guardar la foto</string>
    <string name="storage_not_granted">No se puede almacenar la foto</string>
    <string name="location_rationale">Necesitamos tu localización para esta funcionalidad</string>
    <string name="location_rationale_ok">Permitir</string>
    <string name="location_cancel">Este permiso es importante para la aplicación</string>
    <string name="ver_usuarios_cerca">Ver usuarios próximos</string>
    <string name="open_weather_map_api_key">2a01cfcc4b5c929819cec0ef70371e95</string>
</resources>
