<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".TripCreateActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_create_startPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/trip_create_startPlace_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_create_startPlace"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_create_endPlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/trip_create_endPlace_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_create_endPlace"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_create_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/trip_create_description_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_create_description"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_create_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/trip_create_price_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_create_price"
            android:inputType="number"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trip_create_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/trip_create_picture_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/trip_create_picture"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trip_create_startDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trip_create_startDate"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_create_startDate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/trip_create_startDate_image"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:contentDescription="@string/trip_create_startDate_desc"
            android:onClick="tripCreateStartDateClick"
            app:srcCompat="@drawable/ic_date_green" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/trip_create_endDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/trip_create_endDate"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/trip_create_endDate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/trip_create_endDate_image"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:contentDescription="@string/trip_create_endDate_desc"
            android:onClick="tripCreateEndDateClick"
            app:srcCompat="@drawable/ic_event_red" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/user_edit_progress"
        style="@android:style/Widget.Material.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/trip_create_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_button"
        android:drawableStart="@drawable/ic_save_white_24dp"
        android:text="@string/trip_create_save"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>