<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".UserEditActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/user_edit_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_edit_name_hint"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_edit_surname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/user_edit_surname_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_edit_surname_hint"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/user_edit_email_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/user_edit_email_hint"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_edit_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/user_edit_city_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_edit_city_hint"
            android:inputType="text"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/user_edit_picture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:id="@+id/user_edit_picture_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_edit_picture_hint"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/user_edit_birthdate_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/user_edit_birthdate_tv"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_edit_birthdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="right"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/user_edit_birthdate_image"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:contentDescription="@string/user_edit_birthdate_image_desc"
            android:onClick="userEditBirthdateClick"
            app:srcCompat="@drawable/ic_date_green" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/user_edit_progress"
        style="@android:style/Widget.Material.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/user_edit_save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/green_button"
        android:drawableStart="@drawable/ic_save_white_24dp"
        android:text="@string/user_edit_save"
        android:textAllCaps="true"
        android:textColor="@color/white" />

</LinearLayout>