<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/brujula"
        android:contentDescription="@string/app_name"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/login_main_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email_login_form"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_email">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_email_et"
                    android:hint="@string/login_email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_pass">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_pass_et"
                    android:hint="@string/login_pass_et_hint"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_mail"
                android:backgroundTint="@color/green_button"
                android:drawableStart="@drawable/common_full_open_on_phone"
                android:textAllCaps="true"
                android:text="@string/login_button_mail_text"
                android:textColor="@color/white"/>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_google"
                android:backgroundTint="@color/red_google"
                android:drawableStart="@drawable/common_full_open_on_phone"
                android:textAllCaps="true"
                android:text="@string/login_button_google_text"
                android:textColor="@color/white"/>


            <Button
                android:layout_marginTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/login_button_register"
                android:textAllCaps="true"
                android:text="@string/login_button_register_text"
                android:textColor="@color/green_app"
                style="@style/Widget.AppCompat.Button.Borderless"/>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:id="@+id/login_progress"
        style="@android:style/Widget.Material.ProgressBar.Large"/>
</LinearLayout>